@@ -29,6 +29,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - Updated manpages for qsub and qterm to reflect changed checkpointing
       options.
   b - reject a qchkpt request if checkpointing is not enabled for the job
+  b - Mom should not send checkpoint name and time to server unless checkpoint
+      was successful
 
 2.3.6
   b - change back to not sending status updates until we get cluster addr message
